k8s/gateway-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: microservicios-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: microservicios-vs
spec:
  hosts:
  - "*"
  gateways:
  - microservicios-gateway
  http:
  - match:
    - uri:
        prefix: /orchestrator
    route:
    - destination:
        host: orchestrator-service
        port:
          number: 8080
  - match:
    - uri:
        prefix: /customer
    route:
    - destination:
        host: customer-service
        port:
          number: 8081
  - match:
    - uri:
        prefix: /api/logins
    route:
    - destination:
        host: login-service
        port:
          number: 8082
